--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,9 @@ default:
   before_script:
     - mkdir -p .pip # prepare to cache pip packages
     - export PATH=$PATH:.pip
-    - apk add --update -no-cache py-pip cmake && pip --cache-dir=.pip install -U pip # install python & pip
-    - pip --cache-dir=.pip install awscli 
+    - apk add --update --no-cache py-pip cmake # install python & make
+    - pip --cache-dir=.pip install -U pip # upgrade pip
+    - pip --cache-dir=.pip install awscli # for AWS api
     - if [ ! -z "$TX_TOKEN" ]; then pip --cache-dir=.pip install transifex-client ; else echo "Skipping..."; fi # install transifex cli
     #- rm -rf node_modules
     - yarn # Install all JS dependencies
