GQL code generator also generates a fragment matcher, let apollo client use that instead of the build/start script one . a step toward rewrite|simplification of build scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "resolveJsonModule": true,
     "outDir": "build/dist",
     "module": "esnext",
     "target": "es5",
