--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
     ]
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "error"
+    }
   },
   "dependencies": {
     "@absinthe/socket": "0.1.10",
