--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,9 @@
-{}
+{
+  "prettier.arrowParens": "always",
+  "prettier.singleQuote": true,
+  "prettier.eslintIntegration": true,
+  "prettier.tslintIntegration": true,
+  "prettier.printWidth": 100,
+  "prettier.trailingComma": "none",
+  "prettier.semi": true
+}
