--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build-storybook": "build-storybook --docs -c .storybook",
     "build-deploy-storybook": "./storybook_deploy.sh",
     "gqlcode": "node ./codegen",
-    "gql:fetch-schema": "graphql get-schema --project"
+    "gql:fetch-schema": "graphql get-schema --project",
+    "dev": "esw -w \"src/**/!(*.generated).{ts,tsx}\" --ext .tsx --ext .ts --changed"
   },
   "lint-staged": {
     "src/**/!(*.generated).{js,jsx,ts,tsx,json,css,md}": [
@@ -41,7 +42,8 @@
     "extends": "react-app",
     "rules": {
       "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "error"
+      "react-hooks/exhaustive-deps": "error",
+      "strict": "error"
     }
   },
   "dependencies": {
@@ -201,6 +203,7 @@
     "babel-loader": "8.1.0",
     "core-js": "2.6.10",
     "emotion-theming": "^10.0.14",
+    "eslint-watch": "7.0.0",
     "glob": "7.1.6",
     "graphql-cli": "3.0.14",
     "react-docgen-typescript-loader": "3.6.0",
