--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "react-dropzone": "10.2.0",
     "react-feather": "2.0.3",
     "react-formik-ui": "4.0.3",
+    "react-helmet": "6.1.0",
     "react-instantsearch-dom": "6.1.0",
     "react-live": "2.1.2",
     "react-loadable": "5.5.0",
