JSX.Element is actually just the same :) - fixed some emerging issues

--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "@types/yup": "0.26.24",
     "algoliasearch": "3.32.1",
     "apollo-cache-inmemory": "1.3.10",
-    "apollo-client": "2.6.4",
+    "apollo-client": "^2.6.4",
     "apollo-link": "1.2.13",
     "apollo-link-context": "1.0.10",
     "apollo-link-error": "1.1.7",
@@ -142,7 +142,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.13.1",
-    "react-apollo": "3.1.3",
+    "react-apollo": "^3.1.3",
     "react-dev-utils": "6.0.4",
     "react-docgen-typescript": "1.10.0",
     "react-dom": "^16.13.1",
