--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "zenpub",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://os.reflowproject.eu/",
   "scripts": {
     "start": "cross-env NODE_ENV=development node scripts/start.js --incremental",
     "build": "lingui extract --clean ; lingui compile ; cross-env NODE_ENV=production node scripts/build.js",
@@ -16,6 +17,8 @@
     "build-storybook": "build-storybook --docs -c .storybook",
     "build-deploy-storybook": "./storybook_deploy.sh",
     "gqlcode": "node ./codegen",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "gql:fetch-schema": "graphql get-schema --project"
   },
   "lint-staged": {
@@ -119,6 +122,7 @@
     "file-loader": "2.0.0",
     "formik": "2",
     "fs-extra": "3.0.1",
+    "gh-pages": "3.0.0",
     "github-markdown-css": "4.0.0",
     "graphql": "14.5.8",
     "graphql-tag": "2.10.0",
