--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,26 +4,21 @@
     "outDir": "build/dist",
     "module": "esnext",
     "target": "es5",
-    "types": [
-      "react"
-    ],
-    "lib": [
-      "es7",
-      "dom"
-    ],
+    "types": ["react"],
+    "lib": ["es7", "dom"],
     "sourceMap": true,
     "allowJs": true,
     "jsx": "preserve",
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": false,
-    "importHelpers": true,
-    "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
-    "experimentalDecorators": true,
+    // "noImplicitReturns": true,
+    // "noImplicitThis": true,
+    // "noImplicitAny": false,
+    // "importHelpers": true,
+    // "strictNullChecks": true,
+    // "suppressImplicitAnyIndexErrors": true,
+    // "noUnusedLocals": true,
+    // "experimentalDecorators": true,
     "downlevelIteration": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
@@ -33,13 +28,6 @@
     "noEmit": true,
     "strict": true
   },
-  "exclude": [
-    "node_modules",
-    "build",
-    "scripts",
-    "config"
-  ],
-  "include": [
-    "src"
-  ]
+  "exclude": ["node_modules", "build", "scripts", "config"],
+  "include": ["src"]
 }
