links and url injected in discover home community collection pages, and in sidebar

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
       "problemMatcher": ["$eslint-compact", "$eslint-stylish"],
       "group": "build",
       "label": "npm: lint-watch",
-      "detail": "esw --clear -w \"src/**/!(*.generated).{ts,tsx}\" --ext .tsx --ext .ts --changed"
+      "detail": "esw --clear -w --fix \"src/**/!(*.generated).{ts,tsx}\" --ext .tsx --ext .ts --changed"
     },
     {
       "type": "typescript",
