--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - flavour/zenpub
+    workflow_dispatch:
+      inputs:
+        logLevel:
+          description: 'Log level'
 jobs:
   deploy:
     runs-on: ubuntu-latest
