--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-instantsearch-dom": "6.3.0",
+    "@types/react-leaflet": "2.5.2",
     "@types/react-mentions": "3.0.2",
     "@types/react-portal": "4.0.1",
     "@types/react-router-dom": "5.1.0",
@@ -130,6 +131,7 @@
     "husky": "0.14.3",
     "immutable": "4.0.0-rc.12",
     "interpolate-html-plugin": "3.0.0",
+    "leaflet": "1.7.1",
     "lint-staged": "7.3.0",
     "lodash": "4.17.15",
     "luxon": "1.17.2",
@@ -153,6 +155,7 @@
     "react-formik-ui": "4.0.3",
     "react-helmet": "6.1.0",
     "react-instantsearch-dom": "6.1.0",
+    "react-leaflet": "2.7.0",
     "react-live": "2.1.2",
     "react-loadable": "5.5.0",
     "react-outside-click-handler": "1.2.2",
