Rename ZenPub -> Reflow

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ZenPub",
-  "name": "ZenPub",
+  "short_name": "Reflow",
+  "name": "Reflow",
   "icons": [
     {
       "src": "favicon.ico",
