--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "chalk": "1.1.3",
     "cross-env": "5.2.0",
     "css-loader": "1.0.0",
+    "date-fns": "2.20.1",
     "dompurify": "2.0.8",
     "dotenv": "6.1.0",
     "dotenv-expand": "4.2.0",
