--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zenpub",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://os.reflowproject.eu/",
+  "homepage": ".",
   "scripts": {
     "start": "cross-env NODE_ENV=development react-scripts start --incremental",
     "build": "lingui extract --clean ; lingui compile ; cross-env NODE_ENV=production react-scripts build",
@@ -14,7 +14,7 @@
     "add-locale": "lingui add-locale",
     "extract": "lingui extract --clean",
     "compile": "lingui compile",
-    "docs": "typedoc --out docs src",
+    "docs": "typedoc --out build src",
     "storybook": "start-storybook -p 5000 --docs",
     "build-storybook": "build-storybook --docs -c .storybook",
     "build-deploy-storybook": "./storybook_deploy.sh",
@@ -122,7 +122,7 @@
     "extract": "1.0.0",
     "extract-files": "^5.0.1",
     "file-loader": "2.0.0",
-    "formik": "2",
+    "formik": "2.2.6",
     "fs-extra": "3.0.1",
     "gh-pages": "3.0.0",
     "github-markdown-css": "4.0.0",
