Rename to main branch
Remove outdated flavours/branch from readme

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deployment
 on:
   push:
     branches:
-      - flavour/zenpub
+      - main
   workflow_dispatch:
     inputs:
       logLevel:
