--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "react-dropzone": "10.2.0",
     "react-feather": "2.0.3",
     "react-formik-ui": "4.0.3",
+    "react-google-places-autocomplete": "3.3.1",
     "react-helmet": "6.1.0",
     "react-instantsearch-dom": "6.1.0",
     "react-leaflet": "2.7.0",
@@ -206,6 +207,7 @@
     "@storybook/preset-typescript": "^3",
     "@storybook/react": "^5.3.18",
     "@storybook/source-loader": "^5.3.18",
+    "@types/googlemaps": "3.43.3",
     "@types/graphql": "14.5.0",
     "@types/luxon": "1.15.2",
     "@types/react-slick": "0.23.4",
