--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "postcss-loader": "3.0.0",
     "prettier": "1.19.1",
     "promise": "8.0.1",
+    "qrcode.react": "1.0.1",
     "raf": "3.4.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
