Consolidate WeLoop renaming

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=CommonsPub
+APP_NAME=WeLoop
 # server domain name:
 HOSTNAME=localhost
 # leave the following empty by default, or include the full URL of the client app, only if that is different from FRONTEND_BASE_URL and you want the webserver (Caddy) in the server container to proxy frontend requests to that URL
@@ -11,7 +11,7 @@ BASE_URL=http://localhost
 FRONTEND_BASE_URL=http://localhost
 # URL (or root path) of the backend API
 REACT_APP_GRAPHQL_ENDPOINT=/api/graphql
-# URL for websockets 
+# URL for websockets
 REACT_APP_PHOENIX_SOCKET_ENDPOINT=ws://localhost/api/socket
 # cc public activities to the mothership for indexing
 CONNECT_WITH_MOTHERSHIP=false
