--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "raf": "3.4.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
+    "react-datepicker": "^4.3.0",
     "react-dev-utils": "6.0.4",
     "react-docgen-typescript": "1.10.0",
     "react-dom": "^16.13.1",
