--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "prettier": "1.19.1",
     "promise": "8.0.1",
     "qrcode.react": "1.0.1",
+    "query-string": "7.0.1",
     "raf": "3.4.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
@@ -162,12 +163,14 @@
     "react-live": "2.1.2",
     "react-loadable": "5.5.0",
     "react-outside-click-handler": "1.2.2",
+    "react-reactstrap-pagination": "2.0.3",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
     "react-select": "3.0.4",
     "react-slick": "0.24.0",
     "react-tabs": "3.0.0",
     "react-toastify": "5.4.0",
+    "reactstrap": "8.10.0",
     "rebass": "4.0.7",
     "recompose": "0.30.0",
     "remove-markdown": "0.3.0",
