--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@types/lingui__react": "2.8.1",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-datepicker": "4.1.7",
     "@types/react-dom": "^16.9.0",
     "@types/react-instantsearch-dom": "6.3.0",
     "@types/react-leaflet": "2.5.2",
