--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ PROXY_FRONTEND_URL=
 FRONTEND_HOSTNAME=localhost
 # full backend URL - server protocol, domain name, and port (if it isn't the default for protocol lile 80 or 443):
 BASE_URL=http://localhost
-# full client app URL, where users will browse the site (usually the same as BASE_URL, in which case you can leave it empty)
-FRONTEND_BASE_URL=http://localhost
+# full client app URL, where users will browse the site (i.e used for the sign up email verification)
+REACT_APP_FRONTEND_HOSTNAME=http://localhost
 # URL (or root path) of the backend API
 REACT_APP_GRAPHQL_ENDPOINT=/api/graphql
 # URL for websockets
