--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,7 @@ jobs:
         run: yarn install
 
       - name: Build page
-        run: |
-          npm run build
-          echo " ================================ "
-          echo ${{ secrets.REACT_APP_FRONTEND_HOSTNAME }}
+        run: npm run build
         env:
           REACT_APP_GRAPHQL_ENDPOINT: ${{ secrets.REACT_APP_GRAPHQL_ENDPOINT }}
           REACT_APP_SENTRY_API_KEY: ${{ secrets.REACT_APP_SENTRY_API_KEY }}
